[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[project]
name = "easy-tunnel"
version = "0.1.0"
description = "A graphical OpenSSH local-forward manager built with Flet"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["flet[all]==0.28.3"]

[project.scripts]
easytunnel = "easytunnel.__main__:run"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["easytunnel*"]
