[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[project]
name = "easy-tunnel"
description = "A graphical OpenSSH local-forward manager built with Flet"
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["version"]
dependencies = ["flet[all]==0.28.3", "packaging>=24"]

[project.scripts]
easytunnel = "easytunnel.__main__:run"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["easytunnel*"]

[tool.setuptools.dynamic]
version = {attr = "easytunnel.__version__"}
